bugfix: COCO-105, prevent 'peaking' on narrow screens.

--- a/main.scss
+++ b/main.scss
@@ -24,7 +24,13 @@
 	@media only screen and (max-width: 415px) {
 		width: 100%;
 		right: -100%;
-
+		&.o-drawer.o-drawer-right {
+			width: 100%;
+			right: -100%;
+			&.o-drawer-open {
+				right: 0%;
+			}
+		}
 	}
 }
 
